p6-1-neighborhood-map/src/css/style.css
* {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

html,
body {
  margin: 0;
  width: 100%;
  height: 100%;
  overflow: hidden;
  font-family: Helvetica, "Helvetica Neue", Arial, sans-serif;
}


/* Sidebar Menu */

.menu {
  color: #989898;
  overflow: hidden;
}

#toggle-list {
  height: 46px;
  cursor: pointer;
  background-color: #1b1c1d;
  color: #fff;
  position: relative;
  left: 240px;
  top: 0;
  z-index: 9990;
  padding: 15px;
}

.status {
  text-align: center;
}

/* Search bar */

#search-bar {
  display: flex;
}

#filter-input {
  padding: 6px;
  flex: 5;
}

#filter-button {
  cursor: pointer;
  padding: .7em 0.2em;
  margin-left: -4px;
  background-color: #2185d0;
  color: #fff;
  box-shadow: 0 0 0 0 rgba(34,36,38,.15);
  border: none;
  flex: 2;
}

.filter {
  margin-left: -5px;
}

/* ListView */

#list-view {
  height: 90%;
  width: 100%;
  overflow-y: auto;
  overflow-x: hidden;
  margin: 0;
  padding: 0;
}

li {
  list-style-type: none;
}

.clickable {
  cursor: pointer;
  height: 50px;
  padding: 0;
}

.active,
.clickable:hover {
  background: rgba(128, 128, 128, 0.55);
  color: #fff;
}

.name {
  padding: 12px;
  margin: 0;
  min-height: 50px;
}

/* Map */

#map {
  float: right;
  width: 100%;
  height: 100%;
}

#pano {
  height: 300px;
  width: 300px;
  position: absolute;
  right: 0;
  top: 30;
  z-index: 999;
}


@media all and (max-width: 796px) {
  #pano {
    display: none;
  }
}

